# agentic-ai

./: .gitignore  chatbot.db  main.py  pyproject.toml
Agentic Chatbot/: chatbotMultipleTools.ipynb  chatbotWithTools.ipynb
Agentic Chatbot/chatbotWithTools/: .env.example  agent.py  app.py  extractor.py  memory.py  tools.py
Custom MCP/: client_langgraph.py  customMcpServer.py
Google-Drive-Agent/google-drive-mcp/: gcp-oauth.keys.example.json
Human-In-The-Loop/: hitl.ipynb
Iterative workflows/: iterative_workflows.ipynb
MCP/: weather_mcp.py  weather_mcp_agent.ipynb
Memory/: chatbot.py  short-term-memory.ipynb
Observability/: observability.ipynb
ReAct Agent/: ReAct-Agent.ipynb
chatbot/: backend.py  basic_chatbot.ipynb  chatbot.py
conditional workflows/: conditional_workflow.ipynb
parallel workflows/: 01_parallel_workflow.ipynb
persistence/: persistance.ipynb
sequential workflows/: 01_bmi_workflow.ipynb  02_simple_llm_workflow.ipynb
