[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "langchain>=1.2.18",
    "langchain-huggingface>=1.2.2",
    "langchain-mistralai>=1.1.4",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.10",
    "pip>=26.1.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "transformers>=5.8.0",
]
